--- a/css/index.css
+++ b/css/index.css
@@ -64,3 +64,43 @@ body {
   color: #fff;
   border-bottom-color: #fff;
 }
+
+.nav-link:hover {
+    color: #f0b90b !important;
+}
+
+.btn:hover {
+    opacity: 0.8;
+}
+
+input:focus {
+    background-color: #1e2329 !important;
+    color: #eaecef !important;
+    box-shadow: none !important;
+    border-color: #f0b90b !important;
+}
+
+.bitcoin-bg {
+    background-image: url('../img/bitcoin-bg.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
+.bitcoin-bg::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(12, 13, 15, 0.85); /* Yarı saydam koyu arka plan */
+    z-index: -1;
+}
+
+/* Mevcut içeriğin z-index'ini ayarla */
+.d-flex.w-100.h-100.p-3.mx-auto.flex-column {
+    position: relative;
+    z-index: 1;
+}
